Fixed #41 Clearer tool tip on unit in ingredients. Login messages on side bar no longer have extra spacing and error messages are red.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,6 +57,15 @@ body {
   margin-top: 15px;
 }
 
+.alert.alert-login_success {
+  margin-top: 0;
+}
+
+.alert.alert-login_error {
+  margin-top: 0;
+  color: Red;
+}
+
 /* Main Menu */
 
 .main-menu {
